--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Start Effect -->
         <div class="container">
             <figure class="snip1584">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg" alt="sample87"/>
+                <img src="/images/MA Al Ihsan kalijaring logo.jpg" alt="MA Al-Ihsan kalijaring"/>
                 <figcaption>
                 <h3>Burgundy Flemming</h3>
                 <h5>Advertising</h5>
