--- a/kontak.html
+++ b/kontak.html
@@ -90,7 +90,7 @@
             <p> Anda bisa pesan dan konfirmasi Pembayaran melalui Form dibawah ini:</p>
                 <form action="">
                         <form class="kontak-form" 
-                        action="https://formspree.io/coding9000@gmail.com" method="POST"></form>
+                        action="https://formspree.io/coding9000@gmail.com" method="POST">
                         
                     <label for="nama"> 
                         Nama Lengkap
