--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--start Logo -->
         <div class="container logo ">
             <a href="index.html" title="Oleh-Oleh Khas Jombang-Online"> 
-                <img src="images/Oleh-Oleh Jombang logo.jpg" alt="logo Oleh-Oleh Khas Jombang" width="250"> 
+                <img src="images/logo.jpg" alt="logo Oleh-Oleh Khas Jombang" width="250"> 
             </a>
         </div>
         <!--End Logo-->
