--- a/layanan.html
+++ b/layanan.html
@@ -18,14 +18,14 @@
                 <!-- End Java Scripts -->
             </head>
     <body>
-       <!--Logo oleh-oleh khas Jombang-->
-        <!--start Logo -->
-        <div class="container logo ">
+          <!--start Logo -->
+          <div class="container logo ">
                 <a href="index.html" title="Oleh-Oleh Khas Jombang-Online"> 
-                    <img src="images/Oleh-Oleh Jombang logo.jpg" alt="logo Oleh-Oleh Khas Jombang" width="250"> 
+                    <img src="images/logo.jpg" alt="logo Oleh-Oleh Khas Jombang" width="250"> 
                 </a>
-        </div>
+            </div>
             <!--End Logo-->
+    
 
               
         <!--Start Menu Primer-->
